<resources>
    <string name="app_name">wangAndroid</string>
    <string name="default_toolbar_title"> </string>
    <string name="tb_title">title</string>
    <string name="tb_btn_right">right</string>
    //页面名称
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_home">首页</string>
    <string name="title_activity_system">知识体系</string>
    <string name="title_activity_my">我的</string>
    <string name="title_activity_webview">浏览器</string>
    <string name="title_activity_system_type">知识体系分类</string>
    <string name="title_activity_system_article">知识体系文章</string>
    //登陆
    <string name="login_et_user_name">请输入用户名</string>
    <string name="login_et_password">请输入密码</string>
    <string name="login_et_password_two">请输入确认密码</string>
    //首页
    <string name="home_tv_home">首页</string>
    <string name="home_tv_system">知识体系</string>
    <string name="home_tv_my">我的</string>
    //我的
    <string name="my_tv_collection">我的收藏</string>
    <string name="my_tv_about">关于我们</string>
    <string name="my_tv_exit">退出登录</string>
</resources>
