<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <include layout="@layout/tb_common_right_btn"/>
    <com.example.lilong.Content.CustomUi.NoScrollViewPager
        android:id="@+id/home_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>
    <!--<include layout="@layout/view_interval_gray"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/home_tv_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_tv_home"
            android:drawableTop="@drawable/home"
            android:textColor="@color/common_gray"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/home_tv_system"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_tv_system"
            android:drawableTop="@drawable/serve"
            android:textColor="@color/common_gray"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/home_tv_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/common_gray"
            android:gravity="center"
            android:text="@string/home_tv_my"
            android:drawableTop="@drawable/my"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
