<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/common_blue">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo1"/>
        <TextView
            android:id="@+id/vp_my_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18649738669"
            android:textColor="@color/base_color"
            android:textSize="@dimen/text_mid"/>
    </LinearLayout>

    <TextView
        android:id="@+id/my_tv_collection"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="@dimen/text_huge"
        android:textSize="@dimen/text_small"
        android:gravity="center_vertical"
        android:textColor="@color/common_black"
        android:text="@string/my_tv_collection"/>
    <TextView
        android:id="@+id/my_tv_about"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="@dimen/text_huge"
        android:textSize="@dimen/text_small"
        android:gravity="center_vertical"
        android:textColor="@color/common_black"
        android:text="@string/my_tv_about"/>
    <TextView
        android:id="@+id/my_tv_exit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="@dimen/text_huge"
        android:textSize="@dimen/text_small"
        android:gravity="center_vertical"
        android:textColor="@color/common_black"
        android:text="@string/my_tv_exit"/>

</LinearLayout>
