<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="360dp"
    android:background="@drawable/icon_register_bg"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="@dimen/text_mid"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_style_5">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account"/>
            <EditText
                android:id="@+id/register_et_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_small"
                android:hint="@string/login_et_user_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_style_5">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_password"/>
            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_small"
                android:hint="@string/login_et_password"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_style_5">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_password"/>
            <EditText
                android:id="@+id/register_et_password_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_small"
                android:hint="@string/login_et_password_two"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/title_activity_register"
        android:textColor="@color/common_white"
        android:textSize="@dimen/text_mid"
        android:background="@drawable/bg_style_4"
        android:layout_marginRight="@dimen/text_more_large"
        android:layout_marginLeft="@dimen/text_more_large"
        android:layout_marginTop="@dimen/text_more_large"/>


</LinearLayout>
