<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@drawable/icon_login_bg">
    <LinearLayout
        android:id="@+id/login_tool_bar_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="44dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_back" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_android"
            android:scaleType="fitCenter"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="@dimen/text_small"
        android:paddingBottom="@dimen/text_small"
        android:paddingRight="@dimen/text_more_large"
        android:paddingLeft="@dimen/text_more_large"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_style_1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account"/>
            <EditText
                android:id="@+id/login_et_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_small"
                android:hint="@string/login_et_user_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_style_1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_password"/>
            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_small"
                android:hint="@string/login_et_password"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/text_huge"
        android:paddingRight="@dimen/text_huge">
        <TextView
            android:gravity="center"
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/text_more_large"
            android:background="@drawable/bg_style_3"
            android:text="@string/title_activity_login"
            android:textColor="@color/common_white"
            android:textSize="@dimen/text_mid"/>
        <TextView
            android:gravity="center"
            android:id="@+id/login_btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_style_3"
            android:text="@string/title_activity_register"
            android:textColor="@color/common_white"
            android:textSize="@dimen/text_mid"/>
    </LinearLayout>



</LinearLayout>
